<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/screenBackground"
    >

    <EditText
        android:id="@+id/FirstName"
        android:inputType="textPersonName"
        android:hint="@string/first_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="72dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/first_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="sans"
        android:ems="5"
        app:layout_constraintBottom_toTopOf="@+id/LastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <EditText
        android:id="@+id/LastName"
        android:inputType="textPersonName"
        android:hint="@string/last_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:textAlignment="center"
        android:ems="5"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/last_name"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toTopOf="@+id/DateOfBirth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/DateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/Calculate_Btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Calculate_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="208dp"
        android:text="@string/Calculate_Btn_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>